# brep2graph

./: README.md  noxfile.py  setup.cfg
brep2graph/: __init__.py  brepnet_features.py  configurations.py  utils.py
tests/: configurations_test.py
viz/: main.py
