[metadata]
name = brep2graph
version = 0.1.0
description = A package to convert the BRep to the Graph
long_description = file: README.md
long_description_content_type = text/markdown
author = Danil Petrov
author_email = ddbihbka@gmail.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    homepage = https://github.com/d61h6k4/brep2graph

[options]
packages = find:
install_requires =
    numpy>=1.21
    deprecate>=1.0.5
    occwl@git+https://github.com/AutodeskAILab/occwl@main
python_requires = >=3.8

[options.packages.find]
exclude =
    tests

[options.extras_require]
tests =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
viz =
    networkx>=2.6.3
    matplotlib>=3.5.1
